deployment-k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-wms-input
  labels:
    appname: ms-wms-input
spec:
  selector:
    matchLabels:
      appname: ms-wms-input
  replicas: 1
  template:
    metadata:
      name: ms-wms-input
      labels:
        appname: ms-wms-input
    spec:
      containers:
      - name: ms-wms-input
        image: mycluster.icp:8500/ostrich/mswmsinput
        imagePullPolicy: Always
        ports:
          - name: port1
            containerPort: 8081
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
