deployment-k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvp-myapp
spec:
  type: ClusterIP
  selector:
    appname: mvp-myapp
  ports:
    - name: port-myapp
      port: 8081
      targetPort: 8090
